# f77nml

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  tox.toml
.github/workflows/: ci.yaml  release.yaml
scripts/: release.py
src/f77nml/: __init__.py  __version__.py  cli.py  exceptions.py  lexer.py
src/f77nml/parser/: __init__.py  state.py
tests/: __init__.py  test_cli.py  test_version.py
